runs/slurm-26046.out
Loading parflow-ml/latest
  Loading requirement: openmpi/gcc/4.1.0 parflow/3.9.0 gdal/3.2.1
Traceback (most recent call last):
  File "lstm_sbi.py", line 27, in <module>
    from lstm_build import buildLSTM
  File "/home/qh8373/SBI_TAYLOR/sbi_taylor/scripts/03_sbi_lstm/lstm_build.py", line 265
    def scatterStats(dataY_predict, dataY_hat, cond, save=True, save_path_out):
                     ^
SyntaxError: non-default argument follows default argument
